# SeaBattle

./: Cargo.toml  README.md
doc/: TODO  api.md  commands.md  notes.md  schema.md  schema.sql
src/: controllers.rs  errors.rs  main.rs
src/controllers/: board.rs  game.rs  server.rs  user.rs
src/models/: board.rs  game.rs  server.rs  user.rs
