[package]
name = "seabattle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.1", features = ["headers"] }
axum-macros = "0.3.0"
tokio = { version = "1.23.0", features = ["full"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "json", "mysql", "chrono"] }
serde = "1.0.137"
serde_json = "1.0.57"
simplelog = "0.12.0"
log = "0.4.17"
anyhow = "1.0.58"
chrono = { version = "0.4.23", features = ["serde"] }
rand = "0.8.5"
jsonwebtoken = "8.2.0"
pwhash = "1"
bit-vec = "0.6.3"
lettre = { version = "0.10.0", features = ["builder", "tokio1-native-tls"] }
